--- a/index.html
+++ b/index.html
@@ -2,9 +2,136 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Home</title>
 </head>
 <body>
-
+<header>
+    <div class="logo">Linda Solutions</div>
+    <div class="nav">
+        <div class="nav-text">Hledat</div>
+        <div class="nav-text">Ozn&aacute;men&iacute;</div>
+        <div class="nav-text">Obl&iacute;ben&eacute; produkty</div>
+        <div class="nav-text">Profil</div>
+        <div class="nav-text">Ko&scaron;&iacute;k</div>
+    </div>
+    <div class="nav-text-burger"><img class="burger" src="img/burger.svg" alt=""></div>
+</header>
+<main class="banner">
+    <img class="banner-img" alt="banner" src="img/banner.png">
+    <div class="banner-text">
+        <h1>Ve&scaron;ker&eacute; elektronick&eacute; produkty</h1>
+        <div class="buttons">
+            <button class="btn-1">ZJISTIT V&Iacute;CE</button>
+            <button class="btn-2">CATEGORIE</button>
+        </div>
+    </div>
+</main>
+<main class="mid-section">
+    <section class="subsection-mid">
+        <img class="section-img" src="img/icon-03.svg" alt="img">
+        <div class="section-text-heading">Nejlep&scaron;&iacute; ceny na trhu</div>
+        <div class="section-text">Srovn&aacute;v&aacute;me ceny s konkurenc&iacute;!
+        </div>
+    </section>
+    <section class="subsection-mid">
+        <img class="section-img" src="img/icon-02.svg" alt="img">
+        <div class="section-text-heading">Receive on time</div>
+        <div class="section-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius recusandae?
+        </div>
+    </section>
+    <section class="subsection-mid">
+        <img class="section-img" src="img/icon-01.svg" alt="img">
+        <div class="section-text-heading">Fast work turnaround</div>
+        <div class="section-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius recusandae?
+        </div>
+    </section>
+</main>
+<main class="lower-mid-section">
+    <section class="subsection-wrapper">
+        <section class="subsection-lower">
+            <img class="subsection-img" src="img/card-05.jpg" alt="">
+            <div class="subsection-column">
+                <div class="subsection-text-heading">Web Design</div>
+                <div class="subsection-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
+                    recusandae? Ipsum dolor sit amet.
+                </div>
+                <button class="btn-1">LEARN MORE</button>
+            </div>
+        </section>
+    </section>
+    <section class="subsection-wrapper-white">
+        <section class="subsection-lower">
+            <div class="subsection-column">
+                <div class="subsection-text-heading">Branding</div>
+                <div class="subsection-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
+                    recusandae? Ipsum dolor sit amet.
+                </div>
+                <button class="btn-1">LEARN MORE</button>
+            </div>
+            <img class="subsection-img" src="img/card-04.jpg" alt="">
+        </section>
+    </section>
+    <section class="subsection-wrapper-dark">
+        <section class="subsection-lower">
+            <img class="subsection-img" src="img/card-05.jpg" alt="">
+            <div class="subsection-column">
+                <div class="subsection-text-heading">We are driven by values</div>
+                <div class="subsection-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
+                    recusandae? Ipsum dolor sit amet.
+                </div>
+                <button class="btn-1">LEARN MORE</button>
+            </div>
+        </section>
+    </section>
+</main>
+<main class="bottom-section">
+    <section class="featured-work">
+        <img class="subsection-img" src="img/card-02.jpg" alt="">
+        <img class="subsection-img" src="img/card-01.jpg" alt="">
+    </section>
+    <section class="testimony">
+        <div class="testimony-container">
+            <div class="individual">
+                <img class="individual-icon" alt="" src="img/team-03.jpg">
+                <div class="individual-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
+                    recusandae?
+                </div>
+                <div class="individual-text">JANET MORRIS</div>
+            </div>
+            <div class="individual">
+                <img class="individual-icon" alt="" src="img/team-02.jpg">
+                <div class="individual-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
+                    recusandae?
+                </div>
+                <div class="individual-text">WILLIE BROWN</div>
+            </div>
+            <div class="individual">
+                <img class="individual-icon" alt="" src="img/team-01.jpg">
+                <div class="individual-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
+                    recusandae?
+                </div>
+                <div class="individual-text">SEAN FISHER</div>
+            </div>
+        </div>
+    </section>
+    <section class="work-wrapper">
+        <div class="work">
+            <div class="work-text-heading">Lets work together on next web project</div>
+            <div class="work-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
+                recusandae? Ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
+                recusandae?
+            </div>
+            <button class="btn-1">LEARN MORE</button>
+        </div>
+    </section>
+</main>
+<footer>
+    <div class="feedback">
+        <div class="feedback-text">Leave a reply</div>
+        <div class="feedback-subtext">You must be <a class="login" href="/login">logged in</a> to reply</div>
+    </div>
+</footer>
 </body>
 </html>
