--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="nav-text-burger"><img class="burger" src="img/burger.svg" alt=""></div>
 </header>
 <main class="banner">
-    <img class="banner-img" alt="banner" src="img/banner.png">
+    <img class="banner-img" alt="banner" src="img/img.png">
     <div class="banner-text">
         <h1>Ve&scaron;ker&eacute; elektronick&eacute; produkty</h1>
         <div class="buttons">
@@ -31,21 +31,19 @@
 <main class="mid-section">
     <section class="subsection-mid">
         <img class="section-img" src="img/icon-03.svg" alt="img">
-        <div class="section-text-heading">Nejlep&scaron;&iacute; ceny na trhu</div>
+        <div class="section-text-heading">Nejlep&scaron;&iacute; ceny</div>
         <div class="section-text">Srovn&aacute;v&aacute;me ceny s konkurenc&iacute;!
         </div>
     </section>
     <section class="subsection-mid">
         <img class="section-img" src="img/icon-02.svg" alt="img">
-        <div class="section-text-heading">Receive on time</div>
-        <div class="section-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius recusandae?
-        </div>
+        <div class="section-text-heading">Včasné doručení</div>
+        <div class="section-text">Kompenzujeme zákazníky při zpozdění!</div>
     </section>
     <section class="subsection-mid">
         <img class="section-img" src="img/icon-01.svg" alt="img">
-        <div class="section-text-heading">Fast work turnaround</div>
-        <div class="section-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius recusandae?
-        </div>
+        <div class="section-text-heading">Vždy nablízku</div>
+        <div class="section-text">Pobočky po celé republice!</div>
     </section>
 </main>
 <main class="lower-mid-section">
@@ -53,35 +51,31 @@
         <section class="subsection-lower">
             <img class="subsection-img" src="img/card-05.jpg" alt="">
             <div class="subsection-column">
-                <div class="subsection-text-heading">Web Design</div>
-                <div class="subsection-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
-                    recusandae? Ipsum dolor sit amet.
-                </div>
-                <button class="btn-1">LEARN MORE</button>
+                <div class="subsection-text-heading">Micro součástky</div>
+                <div class="subsection-text">Vysoký výběr micro-počítačů pro domácí i profesionální bastlíře</div>
+                <button class="btn-1">MICRO-PC</button>
             </div>
         </section>
     </section>
-    <section class="subsection-wrapper-white">
+    <section class="subsection-wrapper-light">
         <section class="subsection-lower">
             <div class="subsection-column">
-                <div class="subsection-text-heading">Branding</div>
-                <div class="subsection-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
-                    recusandae? Ipsum dolor sit amet.
+                <div class="subsection-text-heading">Počítače</div>
+                <div class="subsection-text">Sestavené počítačové sestavy a vychytávky pro nenáročné uživatele
                 </div>
-                <button class="btn-1">LEARN MORE</button>
+                <button class="btn-1">POČÍTAČE</button>
             </div>
             <img class="subsection-img" src="img/card-04.jpg" alt="">
         </section>
     </section>
-    <section class="subsection-wrapper-dark">
+    <section class="subsection-wrapper-orange">
         <section class="subsection-lower">
             <img class="subsection-img" src="img/card-05.jpg" alt="">
             <div class="subsection-column">
-                <div class="subsection-text-heading">We are driven by values</div>
-                <div class="subsection-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
-                    recusandae? Ipsum dolor sit amet.
+                <div class="subsection-text-heading">Pro domácnost</div>
+                <div class="subsection-text">Vychytávky pro chytrou a automatizovanou domácnost
                 </div>
-                <button class="btn-1">LEARN MORE</button>
+                <button class="btn-1 borders">DOMÁCNOST</button>
             </div>
         </section>
     </section>
@@ -118,19 +112,17 @@
     </section>
     <section class="work-wrapper">
         <div class="work">
-            <div class="work-text-heading">Lets work together on next web project</div>
-            <div class="work-text">Lorem ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
-                recusandae? Ipsum dolor sit amet. Est explicabo esse est porro illum ab eius
-                recusandae?
+            <div class="work-text-heading">Přidejte se k nám</div>
+            <div class="work-text">Pojďte nabrat zkušenosti z mladého kolektivu pracujícím v inovativním a moderním prostředí
             </div>
-            <button class="btn-1">LEARN MORE</button>
+            <button class="btn-1 borders">NABÍDKA</button>
         </div>
     </section>
 </main>
 <footer>
     <div class="feedback">
-        <div class="feedback-text">Leave a reply</div>
-        <div class="feedback-subtext">You must be <a class="login" href="/login">logged in</a> to reply</div>
+        <div class="feedback-text">Daniel Linda</div>
+        <div class="feedback-subtext">Střední průmyslová škola Ječná 2024</div>
     </div>
 </footer>
 </body>
