--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <main class="lower-mid-section">
     <section class="subsection-wrapper">
         <section class="subsection-lower">
-            <img class="subsection-img" src="img/card-05.jpg" alt="">
+            <img class="subsection-img" src="img/pcb.jpg" alt="">
             <div class="subsection-column">
                 <div class="subsection-text-heading">Micro součástky</div>
                 <div class="subsection-text">Vysoký výběr micro-počítačů pro domácí i profesionální bastlíře</div>
