--- a/pages/profile.html
+++ b/pages/profile.html
@@ -10,15 +10,19 @@
 <header>
     <a href="../index.html" class="logo">Linda Solutions</a>
     <div class="nav">
-        <a class="nav-text">Hledat</a>
+        <a class="nav-text"><label class="search-label">
+            <input placeholder="Hledat..." type="text" class="search-box">
+        </label></a>
         <a class="nav-text">Ozn&aacute;men&iacute;</a>
-        <a class="nav-text">Obl&iacute;ben&eacute; produkty</a>
+        <a class="nav-text">Obl&iacute;ben&eacute;</a>
         <a href="#" class="nav-text">Profil</a>
         <a class="nav-text">Ko&scaron;&iacute;k</a>
     </div>
     <div onclick="burgerClick()" class="nav-text-burger"><img class="burger" src="../img/burger.svg" alt=""></div>
     <div id="drop" class="drop-down">
-        <a class="drop-text">Hledat</a>
+        <a class="drop-text"><label class="search-label">
+            <input placeholder="Hledat..." type="text" class="search-box">
+        </label></a>
         <a class="drop-text">Ozn&aacute;men&iacute;</a>
         <a class="drop-text">Obl&iacute;ben&eacute; produkty</a>
         <a href="#" class="drop-text">Profil</a>
