--- a/index.html
+++ b/index.html
@@ -13,20 +13,26 @@
         <a class="nav-text"><label class="search-label">
             <input placeholder="Hledat..." type="text" class="search-box">
         </label></a>
-        <a class="nav-text">Ozn&aacute;men&iacute;</a>
+        <a onclick="notifyClick()" class="nav-text">Ozn&aacute;men&iacute;</a>
         <a class="nav-text">Obl&iacute;ben&eacute;</a>
         <a href="pages/profile.html" class="nav-text">Profil</a>
         <a class="nav-text">Ko&scaron;&iacute;k</a>
     </div>
-    <div onclick="burgerClick()" class="nav-text-burger"><img class="burger" src="../img/burger.svg" alt=""></div>
+    <div onclick="burgerClick()" class="nav-text-burger"><img class="burger" src="img/burger.svg" alt=""></div>
     <div id="drop" class="drop-down">
         <a class="drop-text"><label class="search-label">
             <input placeholder="Hledat..." type="text" class="search-box">
         </label></a>
-        <a class="drop-text">Ozn&aacute;men&iacute;</a>
+        <a onclick="notifyClick()" class="drop-text">Ozn&aacute;men&iacute;</a>
         <a class="drop-text">Obl&iacute;ben&eacute; produkty</a>
         <a href="pages/profile.html" class="drop-text">Profil</a>
         <a class="drop-text">Ko&scaron;&iacute;k</a>
+    </div>
+    <div id="notify" class="drop-notify">
+        <a class="notify-text">Ozn&aacute;men&iacute;</a>
+        <a class="notify-text">Ozn&aacute;men&iacute;</a>
+        <a class="notify-text">Ozn&aacute;men&iacute;</a>
+        <a class="notify-text">Ozn&aacute;men&iacute;</a>
     </div>
 </header>
 <main class="banner">
