--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input placeholder="Hledat..." type="text" class="search-box">
         </label></a>
         <a onclick="notifyClick()" class="nav-text">Ozn&aacute;men&iacute;</a>
-        <a class="nav-text">Obl&iacute;ben&eacute;</a>
+        <a href="pages/favourite.html" class="nav-text">Obl&iacute;ben&eacute;</a>
         <a href="pages/profile.html" class="nav-text">Profil</a>
         <a class="nav-text">Ko&scaron;&iacute;k</a>
     </div>
@@ -24,7 +24,7 @@
             <input placeholder="Hledat..." type="text" class="search-box">
         </label></a>
         <a onclick="notifyClick()" class="drop-text">Ozn&aacute;men&iacute;</a>
-        <a class="drop-text">Obl&iacute;ben&eacute; produkty</a>
+        <a href="pages/favourite.html" class="drop-text">Obl&iacute;ben&eacute;</a>
         <a href="pages/profile.html" class="drop-text">Profil</a>
         <a class="drop-text">Ko&scaron;&iacute;k</a>
     </div>
