--- a/pages/profile.html
+++ b/pages/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../style.css">
     <script src="../script.js"></script>
-    <title>Profile</title>
+    <title>Profil</title>
 </head>
 <body>
 <header>
@@ -13,8 +13,8 @@
         <a class="nav-text"><label class="search-label">
             <input placeholder="Hledat..." type="text" class="search-box">
         </label></a>
-        <a class="nav-text">Ozn&aacute;men&iacute;</a>
-        <a class="nav-text">Obl&iacute;ben&eacute;</a>
+        <a onclick="notifyClick()" class="nav-text">Ozn&aacute;men&iacute;</a>
+        <a href="favourite.html" class="nav-text">Obl&iacute;ben&eacute;</a>
         <a href="#" class="nav-text">Profil</a>
         <a class="nav-text">Ko&scaron;&iacute;k</a>
     </div>
@@ -23,10 +23,16 @@
         <a class="drop-text"><label class="search-label">
             <input placeholder="Hledat..." type="text" class="search-box">
         </label></a>
-        <a class="drop-text">Ozn&aacute;men&iacute;</a>
-        <a class="drop-text">Obl&iacute;ben&eacute; produkty</a>
+        <a onclick="notifyClick()" class="drop-text">Ozn&aacute;men&iacute;</a>
+        <a href="favourite.html" class="drop-text">Obl&iacute;ben&eacute;</a>
         <a href="#" class="drop-text">Profil</a>
         <a class="drop-text">Ko&scaron;&iacute;k</a>
+    </div>
+    <div id="notify" class="drop-notify">
+        <a class="notify-text">Ozn&aacute;men&iacute;</a>
+        <a class="notify-text">Ozn&aacute;men&iacute;</a>
+        <a class="notify-text">Ozn&aacute;men&iacute;</a>
+        <a class="notify-text">Ozn&aacute;men&iacute;</a>
     </div>
 </header>
 <main class="banner">
