--- a/pages/favourite.html
+++ b/pages/favourite.html
@@ -17,7 +17,7 @@
         <a onclick="notifyClick()" class="nav-text">Ozn&aacute;men&iacute;</a>
         <a href="#" class="nav-text">Obl&iacute;ben&eacute;</a>
         <a href="profile.html" class="nav-text">Profil</a>
-        <a class="nav-text">Ko&scaron;&iacute;k</a>
+        <a href="cart.html" class="nav-text">Ko&scaron;&iacute;k</a>
     </div>
     <div onclick="burgerClick()" class="nav-text-burger"><img class="burger" src="../img/burger.svg" alt=""></div>
     <div id="drop" class="drop-down">
@@ -27,7 +27,7 @@
         <a onclick="notifyClick()" class="drop-text">Ozn&aacute;men&iacute;</a>
         <a href="#" class="drop-text">Obl&iacute;ben&eacute;</a>
         <a href="profile.html" class="drop-text">Profil</a>
-        <a class="drop-text">Ko&scaron;&iacute;k</a>
+        <a href="cart.html" class="drop-text">Ko&scaron;&iacute;k</a>
     </div>
     <div id="notify" class="drop-notify">
         <a class="notify-text">Ozn&aacute;men&iacute;</a>
