--- a/pages/cart.html
+++ b/pages/cart.html
@@ -45,6 +45,7 @@
         </div>
     </div>
 </main>
+<!--content here-->
 <footer>
     <div class="feedback">
         <div class="feedback-text">Daniel Linda</div>
