--- a/pages/cart.html
+++ b/pages/cart.html
@@ -40,11 +40,56 @@
     <img class="banner-img" alt="banner" src="../img/profile.png">
     <div id="banner-text" class="banner-text">
         <h1>Košík: Robert Stinka</h1>
-        <div class="buttons">
-            <button class="btn-1">NAKUPOVAT</button>
-        </div>
     </div>
 </main>
+
+<div class="cart-container">
+    <nav>
+        <ul class="cart-nav">
+            <li class="cart-nav-item cart-nav-item--active">
+                <p>
+                    <strong>
+                        1
+                    </strong>
+                </p>
+                <p>
+                    Košík
+                </p>
+            </li>
+            <li class="cart-nav-item">
+                <p>
+                    <strong>
+                        2
+                    </strong>
+                </p>
+                <p>
+                    Doprava a platba
+                </p>
+            </li>
+            <li class="cart-nav-item">
+                <p>
+                    <strong>
+                        3
+                    </strong>
+                </p>
+                <p>
+                    Dodací údaje
+                </p>
+
+            </li>
+        </ul>
+    </nav>
+    <div class="cart-content">
+        <p>
+            <strong>
+                Váš košík je prázdný
+            </strong>
+        </p>
+        <button onclick="document.location = '../index.html'" class="btn-1">
+            Zpět do obchodu
+        </button>
+    </div>
+</div>
 <!--content here-->
 <footer>
     <div class="feedback">
