--- a/pages/cart.html
+++ b/pages/cart.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <script src="../script.js"></script>
     <title>Košík</title>
 </head>
 <body>
@@ -42,7 +41,6 @@
         <h1>Košík: Robert Stinka</h1>
     </div>
 </main>
-
 <div class="cart-container">
     <nav>
         <ul class="cart-nav">
@@ -90,12 +88,317 @@
         </button>
     </div>
 </div>
-<!--content here-->
+
+<div class="other-products">
+    <div class="other-products-title">
+        <p>
+            <strong>
+                Doporučené produkty pro vás:
+            </strong>
+        </p>
+    </div>
+    <div class="other-products-content">
+        <div class="product-list" id="product-list">
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #1</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                    <img src="../img/icon-shopping_cart.svg" alt="cart">
+                    Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #2</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #3</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #4</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #5</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #6</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #7</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #8</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #9</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #10</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #11</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #12</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #13</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #14</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+            <div class="product">
+                <a>
+                    <img class="subsection-img item-img" src="../img/pcb.jpg" alt="">
+                </a>
+                <div class="product-text">
+                    <div class="product-title">
+                        <a href="#">Item #15</a>
+                        <p>
+                            <strong>
+                                Cena
+                            </strong>
+                        </p>
+                    </div>
+                    <button class="btn-1 borders not-margin">
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do košíku
+                    </button>
+                </div>
+            </div>
+        </div>
+        <button id="prev-btn" class="round-btn" onclick="scrollItems(-1)">
+        <img src="../img/before-icon.svg" alt="before">
+        </button>
+        <button id="next-btn" class="round-btn" onclick="scrollItems(1)">
+            <img src="../img/next-icon.svg" alt="next">
+        </button>
+    </div>
+</div>
 <footer>
     <div class="feedback">
         <div class="feedback-text">Daniel Linda</div>
         <div class="feedback-subtext">Střední průmyslová škola Ječná 2024</div>
     </div>
 </footer>
+<script src="../script.js"></script>
 </body>
 </html>
